完成context的管理